tests/invalids/invalidIf3-1.gt
proc main ()
    int m;
begin
    if read n; then
        n := m;
    fi
end
